--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -24,14 +24,19 @@
             <div class="CameraInfo">
               <div class="col-sm-12">
                 <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
-                <h4>Rememberance Cam</h4>
                 <div class="online">
-                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                  <h4>Rememberance Cam</h4>
+                  <div class="positionTest">
+                    <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                  </div>
                 </div>
-                <p>Details about the camera</p>
-                <p>Details about the camera</p>
-                <h5>Last Entry:</h5>
-                <p class="userInfo">Last entry user info goes here...</p>
+                <div class="camAddress">
+                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
+                </div>
+                <p>Internal URL: 1192.168.1.255</p>
+                <p>External URL: 1192.178.3.187</p>
+                <h5>Accessed by:</h5>
+                <p class="userInfo">Marco Herbst</p>
               </div>
             </div>
           </div>
@@ -50,14 +55,19 @@
             <div class="CameraInfo">
               <div class="col-sm-12">
                 <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
-                <h4>Rememberance Cam</h4>
                 <div class="offline">
-                  <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+                  <h4>Rememberance Cam</h4>
+                  <div class="positionTest">
+                     <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+                  </div>
                 </div>
-                <p>Details about the camera</p>
-                <p>Details about the camera</p>
-                <h5>Last Entry:</h5>
-                <p class="userInfo">Last entry user info goes here...</p>
+                <div class="camAddress">
+                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
+                </div>
+                <p>Internal URL: 1192.168.1.255</p>
+                <p>External URL: 1192.178.3.187</p>
+                <h5>Accessed by:</h5>
+                <p class="userInfo">Marco Herbst</p>
               </div>
             </div>
           </div>
@@ -123,18 +133,22 @@
               <tr>
                 <th>User</th>
                 <th>App</th>
-                <th>Permision</th>
-                <th><span class="glyphicon glyphicon-trash"></span></th>
+                <th>Permision<span class="glyphicon glyphicon-trash"></span></th>
               </tr>
                 <tr>
-                <td>..info..</td>
-                <td>..info..</td>
-                <td>..info..</td>
+                <td>Marco</td>
+                <td>Timelapse</td>
+                <td>Read</td>
               </tr>
               <tr>
-                <td>..info..</td>
-                <td>..info..</td>
-                <td>..info..</td>
+                <td> - </td>
+                <td> - </td>
+                <td>All</td>
+              </tr>
+              <tr>
+                <td>Paddy</td>
+                <td>MMS</td>
+                <td>Write</td>
               </tr>
           </table>
         </div>
@@ -145,14 +159,14 @@
     <div class="col-sm-6">
       <h4>Activity</h4>
       <div class="activityBox">
-        <p><span class="glyphicon glyphicon-play" style="font-size:15px"></span>API Requests to this camera:  4837432 </p>
-        <p><span class="glyphicon glyphicon-play"></span>Last request logged: 13th January 2013 14:12 GMT </p>
+        <p></span>API Requests to this camera: 4837432 </p>
+        <p></span>Last request logged: 13th January 2013 14:12 GMT </p>
       </div>
     </div>
   </div>
   
   
-    <div class="border-1"></div>
+    <div class="border-3"></div>
     
     <br/><br/><br/>
       </div>
