adding initial work on grape-swagger integration

--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -33,6 +33,15 @@
           </ul>
           <ul>
             <li>
+            <i class='fa fa-code'></i>
+            Swagger
+            <ul>
+              <li><a href='/docs/api/v1/swagger'>API Try-Out</a></li>
+            </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
             <i class='fa fa-cog'></i>
             Client Bindings
             <ul>
