updated markup and styling to view.erb

--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -7,7 +7,7 @@
   <!-- Button trigger modal -->
 
   <div class="row">
-    <div class="col-sm-2 col-sm-offset-10">
+    <div class="col-sm-3 col-sm-offset-8">
       <div class="addButton">
         <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">Add Camera</button>
       </div>
@@ -23,18 +23,20 @@
           <div class="row">
             <div class="CameraInfo">
               <div class="col-sm-12">
-                <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
+                <a href="#"><img class="pull-left" src="/img/rememberance.jpg" width="265px"></a>
                 <div class="online">
-                  <h4>Rememberance Cam</h4>
+                  <h4><a href="#">Remembrance Cam</a></h4>
                   <div class="positionTest">
                     <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
                   </div>
                 </div>
                 <div class="camAddress">
-                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
+                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
                 </div>
-                <p>Internal URL: 1192.168.1.255</p>
-                <p>External URL: 1192.178.3.187</p>
+                <div class="url">
+                  <p>Internal URL: 1192.168.1.255</p>
+                  <p>External URL: 1192.178.3.187</p>
+                </div>
                 <h5>Accessed by:</h5>
                 <p class="userInfo">Marco Herbst</p>
               </div>
@@ -54,20 +56,22 @@
           <div class="row">
             <div class="CameraInfo">
               <div class="col-sm-12">
-                <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
+                <a href="#"><img class="pull-left" src="/img/rememberance.jpg" width="265px"></a>
                 <div class="offline">
-                  <h4>Rememberance Cam</h4>
+                  <h4><a href="#">Remembrance Cam</a></h4>
                   <div class="positionTest">
-                     <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+                    <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
                   </div>
                 </div>
                 <div class="camAddress">
-                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
+                  <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
                 </div>
-                <p>Internal URL: 1192.168.1.255</p>
-                <p>External URL: 1192.178.3.187</p>
+                <div class="url">
+                  <p>Internal URL: 1192.168.1.255</p>
+                  <p>External URL: 1192.178.3.187</p>
+                </div>
                 <h5>Accessed by:</h5>
-                <p class="userInfo">Marco Herbst</p>
+                <p class="userInfo">Garrett Heaver</p>
               </div>
             </div>
           </div>
@@ -80,117 +84,90 @@
 
   
   
-<br/><br/><br/>
+  <br/><br/><br/><!-- Temp Line Breaks -->
 
 
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
 
-  <div class="row">
-    <div class="col-sm-6">
-      
-        <div class="streamList">
-          <img class="pull-left" src="/img/rememberance.jpg" width="450px" >
-        </div>
-      </div>
-      <div class="col-sm-6">
-      <div class="stream">
-        
-        <div class="online">
-          <h4>Rememberance Cam</h4>
-          <div class="positionTest">
-            <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="streamList">
+            <img class="pull-left" src="/img/rememberance_refr.jpg" width="450px" >
           </div>
         </div>
-          
-        <div class="camAddress">
-          <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
-        </div>
-        <button class="btn btn-primary btn-md">Update</button>
-        <div class="applications">
-          <h4>Applications</h4>
-            <div class="apps">
-              <i class="fa fa-2x fa-clock-o icon-align-center blue"></i>
-              <i class="fa fa-2x fa-envelope icon-align-center blue"></i>
-              <i class="fa fa-2x fa-android icon-align-center blue"></i>
+        <div class="col-sm-6">
+          <div class="stream">
+            <div class="online">
+              <h4>Remembrance Cam</h4>
+              <div class="positionTest">
+                <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+              </div>
             </div>
+            <div class="camAddress">
+              <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+            </div>
+            <button class="btn btn-primary btn-md">SETTINGS</button>
+            <div class="applications">
+              <h4>Applications</h4>
+              <div class="apps">
+                <i class="fa fa-2x fa-clock-o icon-align-center blue"></i>
+                <i class="fa fa-2x fa-envelope icon-align-center blue"></i>
+                <i class="fa fa-2x fa-android icon-align-center blue"></i>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      </div>
-    </div>
 
-  
-  <div class="border-1"></div>
-  
-  <div class="row">
-    <div class="col-sm-6">
-    
-      <h4>Permissions</h4>
+      <div class="border-1"></div>
       
-      <div class="permissions">
-        <div class="table-responsive">
-          <table class="table table-condensed table-hover">
-              <tr>
-                <th>User</th>
-                <th>App</th>
-                <th>Permision<span class="glyphicon glyphicon-trash"></span></th>
-              </tr>
+      <div class="row">
+        <div class="col-sm-6">
+          <h4>Permissions</h4>
+          <div class="permissions">
+            <table class="table table-condensed table-hover">
                 <tr>
-                <td>Marco</td>
-                <td>Timelapse</td>
-                <td>Read</td>
-              </tr>
-              <tr>
-                <td> - </td>
-                <td> - </td>
-                <td>All</td>
-              </tr>
-              <tr>
-                <td>Paddy</td>
-                <td>MMS</td>
-                <td>Write</td>
-              </tr>
-          </table>
+                  <th>User</th>
+                  <th>App</th>
+                  <th>Permision<a href="#"><span class="glyphicon glyphicon-trash"></span></a></th>
+                </tr>
+                <tr>
+                  <td>Marco</td>
+                  <td>Timelapse</td>
+                  <td>Read</td>
+                </tr>
+                <tr>
+                  <td> - </td>
+                  <td> - </td>
+                  <td>All</td>
+                </tr>
+                <tr>
+                  <td>Paddy</td>
+                  <td>MMS</td>
+                  <td>Write</td>
+                </tr>
+            </table>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <h4>Activity</h4>
+          <div class="activityBox">
+            <p></span>API Requests to this camera: 4837432 </p>
+            <p></span>Last request logged: 13th January 2013 14:12 GMT </p>
+          </div>
         </div>
       </div>
       
-    </div>
-    
-    <div class="col-sm-6">
-      <h4>Activity</h4>
-      <div class="activityBox">
-        <p></span>API Requests to this camera: 4837432 </p>
-        <p></span>Last request logged: 13th January 2013 14:12 GMT </p>
-      </div>
+      <div class="border-3"></div>
+        
+      <br/><br/><br/><!-- Temp Line Breaks -->
+      
     </div>
   </div>
+
+  <!-- Add Camera Form -->
   
-  
-    <div class="border-3"></div>
-    
-    <br/><br/><br/>
-      </div>
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -199,7 +176,7 @@
           <h4 class="modal-title" id="myModalLabel">Camera Details:</h4>
         </div>
         <div class="modal-body">
-      
+
           <div class="addCamera_container">
             <form class="form-horizontal" role="form">
               <div class="form-group">
@@ -238,9 +215,9 @@
                   <p>e.g. 554</p>
                 </div>
               </div>
-
             </form>
           </div>
+          
         </div>
           
         <div class="modal-footer">
@@ -250,5 +227,4 @@
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
-
 </div>
