--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -786,12 +786,12 @@ ul.list-testimonials li:first-child {
 }
 
 .border-1 {
-  border-bottom: 1px solid #dadada;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 .border-3 {
   padding-top: 20px;
-  border-bottom: 1px solid #dadada;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 .border-4 {
@@ -2691,14 +2691,13 @@ width: 100px;
   text-transform: uppercase;
   width: 100px;
 }
-.streamContainer{
 
+.streamContainer{
   padding: 20px 0 20px 0;
 }
 
 .streamList{
-  padding: 10px 0 10px 0;
-
+  padding: 10px 0 0 0;
 }
 
 .streamList h4{
@@ -2709,7 +2708,6 @@ width: 100px;
 .streamList h5{
   font-weight: bold;
   font-size: 16px;
-  padding: 5px 0 0 0;
   margin-bottom: 3px;
 }
 
@@ -2723,10 +2721,8 @@ width: 100px;
   font-size: 14px;
   padding-top: 10px;
   margin-top: 10px;
-  color: #afaeae;
+  color: #99bbd6;
 }
-
-
 
 .modal-footer{
   margin-top: 0px;
@@ -2737,32 +2733,30 @@ width: 100px;
 }
 
 .streamList img{
-  border:1px solid #a3b0ff;
+  border:1px solid #99BBD6;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px; 
-   display: block;
-    margin: 0 auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .online{
-  padding: 6px 0 5px 0;
+  padding: 0 0 5px 0;
   position: relative;
-  border-bottom: 1px solid red;
-    margin-bottom: none;
+  margin-bottom: none;
 }
 
-
-
+.offline{
+  padding: 0 0 5px 0;
+  position: relative;
+  margin-bottom: none;
+}
 
 .positionTest{
   position: absolute;
   top: 14px;
   right: 0;
-}
-
-.offline{
-  padding: 6px 0 10px 0;
 }
 
 .online i{
@@ -2788,23 +2782,46 @@ width: 100px;
   margin-right: 60px;
 }
 
-.addButton{
+.addButton {
   padding-bottom: 10px;
   float: right;
 }
 
+.addButton .btn-primary {
+  color: #fff;
+  background-color: #759fc0;
+  border-color: #759fc0;
+}
+
+.addButton .btn-primary {
+  color: #fff;
+  background-color: #759fc0;
+  border-color: #759fc0;
+}
+
+.addButton  .btn-primary:hover, 
+.btn-primary:focus, 
+.btn-primary:active, 
+.btn-primary.active, 
+.open .dropdown-toggle
+.btn-primary {
+  color: #fff;
+  background-color: #3276b1;
+  border-color: #285e8e;
+}
+
 .camAddress i{
-  color: blue;
+  color: #99bbd6;
   padding-right: 5px;
 }
 
 .applications {
-  padding: 85px 0 45px 0;
+  padding: 90px 0 45px 0;
 }
 
 .apps{
   height: 60px;
-  background: #EFEEEE;
+  background: #f7f6f6;
   padding: 15px 0 0 20px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -2815,18 +2832,15 @@ width: 100px;
   padding-right: 20px;
 }
 
-
-
 .stream h4{
   margin-top: 0px;
-  
 }
 
 .permissions .table{
-background: #EFEEEE;
+  background: #f7f6f6;
   width: 95%;
-   border: none !important;
-     -webkit-border-radius: 5px;
+  border: none !important;
+  -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;  
 }
@@ -2841,7 +2855,7 @@ background: #EFEEEE;
 
 .activityBox{
   height: 133px;
-  background: #EFEEEE;
+  background: #f7f6f6;
   padding: 20px 0 0 30px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -2862,5 +2876,40 @@ background: #EFEEEE;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
+  color: #99bbd6;
 }
 
+.stream .btn-primary {
+  color: #fff;
+  background-color: #759fc0;
+  border-color: #759fc0;
+}
+
+.stream .btn-primary {
+  color: #fff;
+  background-color: #759fc0;
+  border-color: #759fc0;
+}
+
+.stream  .btn-primary:hover, 
+.btn-primary:focus, 
+.btn-primary:active, 
+.btn-primary.active, 
+.open .dropdown-toggle
+.btn-primary {
+  color: #fff;
+  background-color: #3276b1;
+  border-color: #285e8e;
+}
+
+.apps i{
+  color: #99bbd6;
+}
+
+.url{
+  padding: 15px 0 15px 0;
+}
+
+.url p{
+  font-size: 14px;
+}
