--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse">
             <ul class='nav navbar-nav tm-navbar'>
               <li><a href='/'>Home</a></li>
-              <li><a href='/connect'>Connect</a></li>
+              <li><a href='https://play.google.com/store/apps/details?id=io.evercam.connect&hl=en'>Connect</a></li>
               <li><a href='/docs'>Develop</a></li>
               <li><a href='/marketplace'>Marketplace</a></li>
 
