adding link to evercam.js docs from table of content

--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -47,6 +47,7 @@
             <ul>
               <li><a href='http://github.com/evercam/evercam.py' target='_blank'>Python</a></li>
               <li><a href='http://github.com/evercam/evercam.node' target='_blank'>NodeJS</a></li>
+              <li><a href='/docs/api/clients/evercam.js'>JavaScript</a></li>
               <li><a href='http://github.com/evercam/evercam.java' target='_blank'>Java</a></li>
               <li>more soon&hellip;</li>
             </ul>
