Docs - remember language choice

--- a/app/web/views/layouts/_head.erb
+++ b/app/web/views/layouts/_head.erb
@@ -15,5 +15,6 @@
 <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js'></script>
 
 <script src='/js/jquery.mobilemenu.js'></script>
+<script src='/js/jquery.cookie.js'></script>
 <script src='/js/msgFloat.js'></script>
 
