--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -24,10 +24,10 @@
             API V1
             <ul>
               <li><a href='/docs/api/v1/authentication'>Authentication</a></li>
-              <li><a href='/docs/api/v1/models'>Models</a></li>
-              <li><a href='/docs/api/v1/streams'>Streams</a></li>
+              <li><a href='/docs/api/v1/cameras'>Cameras</a></li>
               <li><a href='/docs/api/v1/users'>Users</a></li>
               <li><a href='/docs/api/v1/vendors'>Vendors</a></li>
+              <li><a href='/docs/api/v1/models'>Models</a></li>
             </ul>
             </li>
           </ul>
