replacing ampersand with html char code

--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -95,7 +95,7 @@
 							  <img class="avatar" src="https://secure.gravatar.com/avatar/bc5816bd84db9de699f207423d55db18?s=230">
 							  <h4>Shakeel Anjum</h4>
 							  <h5>Hacker</h5>
-							  <p>Malaria survivor & gentle soul</p>
+							  <p>Malaria survivor &amp; gentle soul</p>
 						</div>
 					</div>
 					<div class="member">
