updated markup and styling to view.erb - added delete to table

--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -34,8 +34,8 @@
                   <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
                 </div>
                 <div class="url">
-                  <p>Internal URL: 1192.168.1.255</p>
-                  <p>External URL: 1192.178.3.187</p>
+                  <p>Internal URL: 89.101.225.151</p>
+                  <p>External URL: 24.192.38.337</p>
                 </div>
                 <h5>Accessed by:</h5>
                 <p class="userInfo">Marco Herbst</p>
@@ -67,8 +67,8 @@
                   <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
                 </div>
                 <div class="url">
-                  <p>Internal URL: 1192.168.1.255</p>
-                  <p>External URL: 1192.178.3.187</p>
+                  <p>Internal URL: 89.101.225.151</p>
+                  <p>External URL: 24.192.38.337</p>
                 </div>
                 <h5>Accessed by:</h5>
                 <p class="userInfo">Garrett Heaver</p>
@@ -130,22 +130,26 @@
                 <tr>
                   <th>User</th>
                   <th>App</th>
-                  <th>Permision<a href="#"><span class="glyphicon glyphicon-trash"></span></a></th>
+                  <th>Permission</th>
+                  <th></th>
                 </tr>
                 <tr>
                   <td>Marco</td>
                   <td>Timelapse</td>
                   <td>Read</td>
+                  <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
                 </tr>
                 <tr>
                   <td> - </td>
                   <td> - </td>
                   <td>All</td>
+                  <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
                 </tr>
                 <tr>
                   <td>Paddy</td>
                   <td>MMS</td>
                   <td>Write</td>
+                  <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
                 </tr>
             </table>
           </div>
@@ -153,8 +157,8 @@
         <div class="col-sm-6">
           <h4>Activity</h4>
           <div class="activityBox">
-            <p></span>API Requests to this camera: 4837432 </p>
-            <p></span>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>API Requests to this camera: 4837432 </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
           </div>
         </div>
       </div>
