--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -2863,20 +2863,21 @@ width: 100px;
 }
 
 .activityBox p{
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .permissions .glyphicon {
   position: relative;
   top: 1px;
+  margin: 0;
   display: inline-block;
-  padding-left: 20px;
   font-family: 'Glyphicons Halflings';
   -webkit-font-smoothing: antialiased;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
   color: #99bbd6;
+  text-align: left;
 }
 
 .stream .btn-primary {
@@ -2913,3 +2914,10 @@ width: 100px;
 .url p{
   font-size: 14px;
 }
+
+
+table.table tr td .vanish { display:none;}
+table.table tr:hover td .vanish { display:inline-block;}
+
+table.table tr td div.btn-group { display:none;}
+table.table tr:hover td div.btn-group { display:inline-block;}
