--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -109,11 +109,33 @@
             </div>
             <button class="btn btn-primary btn-md">SETTINGS</button>
             <div class="applications">
-              <h4>Applications</h4>
-              <div class="apps">
-                <i class="fa fa-2x fa-clock-o icon-align-center blue"></i>
-                <i class="fa fa-2x fa-envelope icon-align-center blue"></i>
-                <i class="fa fa-2x fa-android icon-align-center blue"></i>
+              <div class="permissions">
+                <table class="table table-condensed table-hover">
+                  <tr>
+                    <th>App</th>
+                    <th>Name</th>
+                    <th>Date</th>
+                    <th></th>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-2x fa-clock-o icon-align-center blue"></i></td>
+                    <td>Timelapse</td>
+                    <td>05/01/14</td>
+                    <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-2x fa-envelope icon-align-center blue"></i></td>
+                    <td>Snapshot</td>
+                    <td>01/01/14</td>
+                    <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-2x fa-android icon-align-center blue"></i></td>
+                    <td>App Generator</td>
+                    <td>15/01/14</td>
+                    <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
@@ -127,30 +149,30 @@
           <h4>Permissions</h4>
           <div class="permissions">
             <table class="table table-condensed table-hover">
-                <tr>
-                  <th>User</th>
-                  <th>App</th>
-                  <th>Permission</th>
-                  <th></th>
-                </tr>
-                <tr>
-                  <td>Marco</td>
-                  <td>Timelapse</td>
-                  <td>Read</td>
-                  <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-                </tr>
-                <tr>
-                  <td> - </td>
-                  <td> - </td>
-                  <td>All</td>
-                  <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-                </tr>
-                <tr>
-                  <td>Paddy</td>
-                  <td>MMS</td>
-                  <td>Write</td>
-                  <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
-                </tr>
+              <tr>
+                <th>User</th>
+                <th>App</th>
+                <th>Permission</th>
+                <th></th>
+              </tr>
+              <tr>
+                <td>Marco</td>
+                <td>Timelapse</td>
+                <td>Read-only</td>
+                <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
+              </tr>
+              <tr>
+                <td> - </td>
+                <td> - </td>
+                <td>Full</td>
+                <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
+              </tr>
+              <tr>
+                <td>Paddy</td>
+                <td>MMS</td>
+                <td>Write</td>
+                <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
+              </tr>
             </table>
           </div>
         </div>
