--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -1,11 +1,6 @@
-
 <div class="addCamera">
-  <h1>Hi <%= @user.forename %></h1>
-  <p>We're working super hard to bring you a <strong>great</strong> Evercam experience, until then why not browse through our ever growing documentation and think about all the wonderful apps that are headed your way.</p>
-  <p>Best regards,<br />The Evercam Team.</p>
 
   <!-- Button trigger modal -->
-
   <div class="row">
     <div class="col-sm-3 col-sm-offset-8">
       <div class="addButton">
@@ -82,10 +77,7 @@
 
   <div class="border-1"></div>
 
-  
-  
   <br/><br/><br/><!-- Temp Line Breaks -->
-
 
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
@@ -114,25 +106,29 @@
                   <tr>
                     <th>App</th>
                     <th>Name</th>
-                    <th>Date</th>
+                    <th>Date Added</th>
+                    <th>Price</th>
                     <th></th>
                   </tr>
                   <tr>
                     <td><i class="fa fa-2x fa-clock-o icon-align-center blue"></i></td>
                     <td>Timelapse</td>
                     <td>05/01/14</td>
+                    <td>Free</td>
                     <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
                   </tr>
                   <tr>
                     <td><i class="fa fa-2x fa-envelope icon-align-center blue"></i></td>
                     <td>Snapshot</td>
                     <td>01/01/14</td>
+                    <td>Free</td>
                     <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
                   </tr>
                   <tr>
                     <td><i class="fa fa-2x fa-android icon-align-center blue"></i></td>
                     <td>App Generator</td>
                     <td>15/01/14</td>
+                    <td>Free</td>
                     <td width="10%"><a class="vanish" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
                   </tr>
                 </table>
@@ -201,6 +197,7 @@
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           <h4 class="modal-title" id="myModalLabel">Camera Details:</h4>
         </div>
+        
         <div class="modal-body">
 
           <div class="addCamera_container">
