--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -66,7 +66,7 @@
                   <p>External URL: 24.192.38.337</p>
                 </div>
                 <h5>Accessed by:</h5>
-                <p class="userInfo">Garrett Heaver</p>
+                <p class="userInfo">Marco Herbst</p>
               </div>
             </div>
           </div>
@@ -74,6 +74,7 @@
       </div>
     </div>
   </div>
+
 
   <div class="border-1"></div>
 
@@ -98,8 +99,13 @@
             </div>
             <div class="camAddress">
               <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
+              <a href="#"><p><i class="fa fa-1x fa-repeat icon-align-center blue"></i>Refresh</p></a>
             </div>
-            <button class="btn btn-primary btn-md">SETTINGS</button>
+            <div class="settingsButton">
+              <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">SETTINGS</button>
+            </div>
+            
+            
             <div class="applications">
               <div class="permissions">
                 <table class="table table-condensed table-hover">
@@ -177,6 +183,13 @@
           <div class="activityBox">
             <p>API Requests to this camera: 4837432 </p>
             <p>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
+            <p>Last request logged: 13th January 2013 14:12 GMT </p>
           </div>
         </div>
       </div>
@@ -208,12 +221,26 @@
                   <input type="text" class="form-control" id="inputArea" placeholder="Camera Name">
                 </div>
               </div>
+              
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-3 control-label">Camera ID:</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" id="inputArea" placeholder="Camera ID">
+                </div>
+              </div>
                 
               <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">URL or IP:</label>
                 <div class="col-sm-8">
                   <input type="text" class="form-control" id="inputArea" placeholder="Public IP / Dydns">
                   <p>e.g. 149.237.190.68 - or - test.dydns.com</p>
+                </div>
+              </div>
+              
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-3 control-label">Time Zone:</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" id="inputArea" placeholder="Time Zone">
                 </div>
               </div>
            
