--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -1363,6 +1363,13 @@ footer span a:hover {
 
 }
 
+@media (max-width: 1200px) {
+  .right_container{
+    padding-top: 20px;
+  }
+}
+
+
 @media (max-width: 991px) {
 
   .container {
@@ -1385,6 +1392,11 @@ footer span a:hover {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+
+  .right_container{
+    padding-top: 20px;
+  }
+
 
   .tm-navbar{
     display: block;
@@ -1421,6 +1433,10 @@ footer span a:hover {
 }
 
 @media (max-width: 767px) {
+
+  .right_container{
+    padding-top: 20px;
+  }
 
   #bs-example-navbar-collapse{
     background-color: #EFEEEE;
@@ -1551,6 +1567,10 @@ footer span a:hover {
 
 @media (min-width: 626px) and (max-width: 767px) {
 
+  .right_container{
+    padding-top: 20px;
+  }
+
   .header-block h1 {
     display: block;
     margin-left: auto;
@@ -1594,6 +1614,10 @@ footer span a:hover {
 
 @media (min-width: 768px) and (max-width: 991px) {
 
+  .right_container{
+    padding-top: 20px;
+  }
+
   .header-block h1 {
     display: block;
     margin-left: auto;
@@ -1604,6 +1628,10 @@ footer span a:hover {
 }
 
 @media (min-width: 482px) and (max-width: 625px) {
+
+  .right_container{
+    padding-top: 20px;
+  }
 
   .header-block h1 {
     display: block;
@@ -1641,6 +1669,10 @@ footer span a:hover {
 }
 
 @media (max-width: 481px) {
+
+  .right_container{
+    padding-top: 20px;
+  }
 
   header #logo {
     padding-left: 20px;
@@ -1704,6 +1736,10 @@ footer span a:hover {
 }
 
 @media (max-width: 321px) {
+
+  .right_container{
+    padding-top: 20px;
+  }
 
   .list-solutions li img {
     float: none;
@@ -2882,7 +2918,6 @@ font-weight: normal;
 }
 
 .camAddress p{
-  line-height: 2px;
   margin: 0 0 10px 0;
 }
 
@@ -2913,7 +2948,7 @@ font-weight: normal;
 }
 .permissions .table{
   background: #f7f6f6;
-  width: 95%;
+  width: 100%;
   border: none !important;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
